ci: release-smoke - run a real Maven build instead of jbang/javac+java (#87)
* ci: release-smoke - run a real Maven build instead of jbang/javac+java

Both smoke paths previously bypassed Maven: the native-runner legs used
jbang, the container-probe legs used a quiet dependency-plugin:copy +
raw javac/java. Output was a single terse line, nothing that looked
like an actual build.

Move Smoke.java into a standard src/main/java layout and add a
standalone .github/smoke/pom.xml (outside the root reactor) that
resolves the released zstd + native jars via -Dzstd.version/
-Dzstd.classifier and runs them with exec-maven-plugin. Vendor the
Maven Wrapper already used at the repo root so no leg needs a
preinstalled Maven - including inside the 8 container-probe images,
which now run the same `mvnw compile exec:exec` under their own JDK
instead of only executing a bare `java` command compiled on the host.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>

* ci: release-smoke - install unzip on the al2023 minimal probe

amazoncorretto:25-al2023 is a stripped-down image with neither unzip
nor tar, so the vendored mvnw couldn't extract the downloaded Maven
distribution ("tar: command not found"). Discovered by the previous
commit switching this leg from a bare `java` invocation to a real
`mvnw compile exec:exec` - the old path never exercised Maven's own
bootstrap, so this gap was invisible.

Add an optional per-matrix-entry containerSetup command, run before
mvnw inside the container, and set it to `microdnf install -y -q
unzip` for the two al2023 legs.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>

* ci: release-smoke - extract Maven on host for containers, add results summary

The unzip fix for al2023 didn't work: that image has no package
manager at all (microdnf: command not found), not just a missing
unzip. Rather than chase per-distro package managers across 8
containers, sidestep the problem: extract Maven once on the host
(ubuntu-latest always has curl+